--- a/src/components/CharacterEditor/CharacterEditor.module.css
+++ b/src/components/CharacterEditor/CharacterEditor.module.css
@@ -4,10 +4,12 @@
 }
 
 .maxWidthWrapper {
+position: relative;
 }
 
 .header {
   padding-bottom: 64px;
+  max-width: 65%;
 }
 
 .title {
@@ -24,7 +26,23 @@
 }
 
 .characterWrapper {
+  height: 700px;
+  position: fixed;
+  width: 35%;
+  top: 15%;
+  left: 65%;
+  bottom: 15px;
 }
 
 .controlColumn {
+  max-width: 50%;
+}
+
+.perspectiveEffect {
+  position: fixed;
+  top: 60%;
+  width: 100%;
+  height: 40%;
+  bottom: 0;
+  background-color:  hsl(93, 83%, 33%);
 }
